refactor: project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div>
+<div class="App">
   <a routerLink="/">Home</a>
   <a routerLink="/about">About</a>
 </div>
-<button (click)="tracking()">Click GTM</button>
-<button (click)="trackingRef()">Click reason</button>
 <router-outlet></router-outlet>
